protocols/tests/adders/adder_d0/illegal_observation_conditional.out
error: Output 'DUT.s' depends on input(s) 'DUT.b' which do not have assigned values
   ┌─ adders/adder_d0/add_d0.prot:9:3
   │
 9 │   DUT.b := X;
   │   ^^^^^^^^^^^ 'DUT.b' assigned DontCare here
   ·
12 │   if (DUT.s == 32'b0) { // this should be illegal
   │       ^^^^^ Output 'DUT.s' depends on input(s) 'DUT.b' which do not have assigned values

